--- a/index.html
+++ b/index.html
@@ -409,6 +409,27 @@
     </div>
 </section>
 
+<section id="partners">
+    <h2 class="section-title">Parceiros</h2>
+    <div class="grid">
+        <div class="card" style="text-align:center">
+            <img src="media/images/linux_tips.jpg" alt="LinuxTips" style="width:120px;height:120px;border-radius:50%;margin-bottom:1rem;">
+            <h3>LinuxTips</h3>
+            <p>
+                <a href="https://linuxtips.io/" target="_blank">Site oficial</a> —
+                <a href="https://www.instagram.com/linuxtipsbr/" target="_blank">Instagram</a>
+            </p>
+        </div>
+        <div class="card" style="text-align:center">
+            <img src="media/images/pyladies.jpg" alt="PyLadies Manaus" style="width:120px;height:120px;border-radius:50%;margin-bottom:1rem;">
+            <h3>PyLadies Manaus</h3>
+            <p>
+                <a href="https://www.instagram.com/pyladiesmanaus/?hl=en" target="_blank">Instagram</a>
+            </p>
+        </div>
+    </div>
+</section>
+
 <section id="services">
     <h2 class="section-title">O Que Fazemos</h2>
     <div class="grid">
