--- a/index.html
+++ b/index.html
@@ -235,6 +235,17 @@
             position: relative;
             overflow: hidden;
         }
+        #partners .card a {
+            color: #2b6cb8;
+            font-weight: 600;
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+
+        #partners .card a:hover {
+            text-decoration: underline;
+            transform: translateY(-2px);
+        }
 
         .card::before {
             content: '';
