--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
             }
         }
     </style>
+    <link rel="icon" href="media/images/favi.ico" />
+
 </head>
 <body>
 <div class="particles" id="particles"></div>
