--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             overflow-x: hidden;
         }
 
-        /* Animated background particles */
         .particles {
             position: fixed;
             top: 0;
@@ -113,7 +112,7 @@
 
         /* Hero Section */
         .hero {
-            height: 100vh;
+            padding: 5rem 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -202,7 +201,7 @@
 
         /* Sections */
         section {
-            padding: 6rem 2rem;
+            padding: 4rem 2rem;
             max-width: 1200px;
             margin: 0 auto;
         }
@@ -360,8 +359,8 @@
             }
 
             .lema {
-                font-size: 1.3rem;
-                padding: 0.8rem 1.5rem;
+                font-size: 1.2rem;
+                padding: 0.5rem 1.2rem;
             }
 
             .nav-links {
@@ -370,6 +369,13 @@
 
             section {
                 padding: 4rem 1rem;
+            }
+
+            .hero a.cta-button,
+            .hero a.cta-secondary {
+                display: block;
+                width: 90%;
+                margin: 0.5rem auto;
             }
         }
     </style>
